--- a/restAssuredDemo/pom.xml
+++ b/restAssuredDemo/pom.xml
@@ -86,11 +86,11 @@
 			<version>4.0.9</version>
 		</dependency>
 		
-		<dependency>
+		<!-- dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency>
+		</dependency-->
 		</dependencies>
 	
 	
